# algemaploom-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.sh  build_java.sh  build_nodejs.sh  build_python.sh  bump-version.sh  index.md  package-lock.json  package.json  rust-toolchain.toml  test_java.sh
operator/: Cargo.toml
operator/src/: formats.rs  lib.rs  tuples.rs
plan/: Cargo.toml
plan/src/: data_type.rs  lib.rs
plan/src/states/: join.rs  mod.rs  processed.rs  serialized.rs  start.rs
translator/: Cargo.toml
translator/resources/test/csv-testcases/RMLTC0002a-CSV/: mapping.ttl
translator/resources/test/rmlmapper-custom/: engine_specific_features.md
translator/resources/test/rmlmapper-custom/rml-ldes/RMLLDES0001a/: base.rml.ttl  change.rml.ttl
translator/resources/test/rmlmapper-custom/rml-ldes/RMLLDES0001b/: base.rml.ttl  change.rml.ttl
translator/src/: error.rs  lib.rs  mapping_test.rs  test_macro.rs
translator/src/new_rml/: error.rs  mod.rs
translator/src/new_rml/extractors/: abstract_logical_source_extractor.rs  error.rs  expression_map.rs  function_execution.rs  graphmap_extractor.rs  input_map.rs  io.rs  mod.rs  objectmap_extractor.rs  pom_extractor.rs  predicatemap_extractor.rs  rdb_logicalsource.rs  refobject_extractor.rs  store.rs  subjectmap_extractor.rs  term_map_extractor.rs  triplesmap_extractor.rs
translator/src/new_rml/extractors/expression_map/: base_expression_enum.rs  mod.rs
translator/src/new_rml/extractors/fnml/: function_execution.rs  mod.rs
translator/src/new_rml/extractors/logical_source/: iterable.rs  mod.rs  ref_form.rs
translator/src/new_rml/extractors/logical_target/: mod.rs
translator/src/new_rml/extractors/logical_view/: field.rs  join_view.rs  mod.rs  struct_annotation.rs
translator/src/new_rml/extractors/source/: csvw_source.rs  kafka_source.rs  mod.rs  rdb_source.rs  tcp_source.rs
translator/src/new_rml/extractors/tests/: mod.rs  newrml_core_tests.rs
translator/src/new_rml/extractors/tests/framework/: test_core.rs  (+2 more)
translator/src/new_rml/rml_model/: mod.rs
translator/src/new_rml/rml_model/v2/: mod.rs
translator/src/new_rml/translator/: error.rs  mod.rs  store.rs
translator/src/new_rml/translator/extend/: mod.rs
translator/src/new_rml/translator/join/: mod.rs
translator/src/new_rml/translator/serializer/: mod.rs
translator/src/new_rml/translator/source/: fields.rs  iterator.rs  mod.rs
translator/src/normalized_rml/: io.rs  mod.rs
translator/src/normalized_rml/error/: fromfile.rs
translator/src/normalized_rml/translator/: mod.rs  util.rs
translator/src/normalized_rml/translator/extend_creation/: mod.rs
translator/src/normalized_rml/translator/source_creation/: mod.rs
translator/src/rml/: error.rs  mod.rs  types.rs  util.rs
translator/src/rml/operators/: extend.rs  fragment.rs  projection.rs  source.rs
translator/src/rml/operators/serializer/: mod.rs  nquads.rs  ntriples.rs  util.rs
translator/src/rml/parser/: mod.rs
translator/src/rml/parser/extractors/: config_extractor.rs  error.rs  functionmap_extractor.rs  graphmap_extractor.rs  io.rs  ldes_extractor.rs  logicalsource_extractor.rs  logicaltarget_extractor.rs  mod.rs  objectmap_extractor.rs  pom_extractor.rs  predicatemap_extractor.rs  rdb_logicalsource.rs  store.rs  subjectmap_extractor.rs  term_map_info_extractor.rs  triplesmap_extractor.rs
translator/src/rml/parser/rml_model/: mod.rs  source_target.rs  term_map.rs
translator/src/rmlalgebra/: mod.rs  util.rs
translator/src/rmlalgebra/operators/: extend.rs  mod.rs  projection.rs  source.rs
translator/src/shexml/: error.rs  mod.rs  tests.rs  util.rs
translator/src/shexml/operators/: rename.rs  source.rs
translator/src/shexml/operators/extend/: mod.rs  term.rs
translator/src/shexml/parcombi/: errors.rs  mod.rs
translator/src/shexml/parcombi/parser/: mod.rs  tests.rs
(+134 files in other folders)
