[package]
name = "meamer-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true


[profile.release]
opt-level = 3

[workspace]
members = ["operator", "vocab", "plan", "translator"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.5.1"
authors = ["Sitt Min Oo"]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.71"
lazy_static = "1.4.0"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = "1.0.99"
thiserror = "1.0.44"
log4rs = "1.2.0"
log = "0.4.21"
either = "1.10.0"
uuid = { version = "1.3.0", features = ["v4"] }
clap = { version = "4.3.12", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["try_unwrap", "is_variant", "unwrap"] }


[dependencies]
anyhow.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
clap.workspace = true

operator = { path = "./operator/" }
plan = { path = "./plan/" }
translator = { path = "./translator/" }

csv = "1.2.2"
urlencoding = "2.1.2"
walkdir = "2.4.0"
colored = "2.0.4"
log4rs.workspace = true
log.workspace = true
jni = { version = "0.21.1", optional = true }
neon = { version = "1.0.0", optional = true }
pyo3 = { version = "0.21.2", features = ["extension-module"], optional = true }

[lib]
name = "ltranslator"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "translator-bin"
path = "src/bin/translator-bin/main.rs"
