[package]
name = "translator"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_api = "0.7.2"
sophia_inmem = "0.7.2"
sophia_turtle = "0.7.2"
sophia_term = "0.7.2"
chumsky = "0.9.3"

vocab = { path = "../vocab/" }
operator = { path = "../operator/" }
plangenerator = { path = "../plan/" }


either.workspace = true
anyhow.workspace = true
uuid.workspace = true
regex.workspace = true
lazy_static.workspace = true
serde_json.workspace = true
serde.workspace = true
clap.workspace = true
log.workspace = true

