[package]
name = "translator"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_api = "0.9.0"
sophia_inmem = "0.9.0"
sophia_turtle = "0.9.0"
sophia_term = "0.9.0"
oxigraph = { version = "0.4.8", default-features = false }

chumsky = "0.9.3"

vocab = { path = "../vocab/" }
operator = { path = "../operator/" }
plan = { path = "../plan/" }


either.workspace = true
anyhow.workspace = true
uuid.workspace = true
regex.workspace = true
lazy_static.workspace = true
serde_json.workspace = true
serde.workspace = true
clap.workspace = true
log.workspace = true

